Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.3, 0.10.0, 0.11.0
-
None
Description
struct MeMessage { 1: optional string fixed 7: required string unchecked }
Here reserved fixed C# keyword is escaped via @ but unchecked is not escaped in C# code so code is just not compilable
I had a look in t_csharp_generator.cc and keyword are present and method normalize_name should make the escape
Attachments
Issue Links
- links to