THRIFT-4558 normalize name in C# constructor Client: csharp Patch: Pierre Mignolet <p.mignolet@evs.com>

This closes #1546